--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.28.1
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.17.0
-st-aggrid==0.3.4
-openpyxl==3.1.2
-xlrd==2.0.1
-pyinstaller==6.3.0
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.17.0
+streamlit-aggrid==0.3.3
+openpyxl>=3.1.0
+xlrd>=2.0.0
