--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit>=1.28.0
-pandas>=2.0.0
-numpy>=1.24.0
-plotly>=5.17.0
+streamlit
+pandas
+numpy
+plotly
+openpyxl
 streamlit-aggrid==0.3.3
-openpyxl>=3.1.0
-xlrd>=2.0.0
